--- a/content/docs/impl/goutils-errs.mdx
+++ b/content/docs/impl/goutils-errs.mdx
@@ -1,5 +1,5 @@
 ---
-title: gperr
+title: goutils/errs
 description: gperr is an error interface that supports nested structure and subject highlighting
 ---
 
