--- a/content/docs/impl/goutils-eventqueue.mdx
+++ b/content/docs/impl/goutils-eventqueue.mdx
@@ -1,5 +1,5 @@
 ---
-title: Event Queue
+title: goutils/eventqueue
 description: A generic, buffered event queue with batch processing and configurable flush intervals
 ---
 
