--- a/content/docs/impl/goutils-http-accesslog.mdx
+++ b/content/docs/impl/goutils-http-accesslog.mdx
@@ -1,5 +1,5 @@
 ---
-title: accesslog
+title: goutils/http/accesslog
 description: HTTP access logging interface for recording request and response details
 ---
 
