--- a/content/docs/impl/goutils-http-httpheaders.mdx
+++ b/content/docs/impl/goutils-http-httpheaders.mdx
@@ -1,5 +1,5 @@
 ---
-title: httpheaders
+title: goutils/http/httpheaders
 description: HTTP headers utilities for proxy and middleware applications
 ---
 
