--- a/content/docs/impl/goutils-http-reverseproxy.mdx
+++ b/content/docs/impl/goutils-http-reverseproxy.mdx
@@ -1,5 +1,5 @@
 ---
-title: reverseproxy
+title: goutils/http/reverseproxy
 description: Enhanced HTTP reverse proxy with WebSocket and HTTP/2 support, integrated with godoxy's logging and access control systems
 ---
 
