--- a/content/docs/impl/goutils-http-websocket.mdx
+++ b/content/docs/impl/goutils-http-websocket.mdx
@@ -1,5 +1,5 @@
 ---
-title: websocket
+title: goutils/http/websocket
 description: WebSocket connection manager with automatic ping-pong, JSON messaging, and periodic updates
 ---
 
