--- a/content/docs/impl/goutils-http.mdx
+++ b/content/docs/impl/goutils-http.mdx
@@ -1,5 +1,5 @@
 ---
-title: http
+title: goutils/http
 description: HTTP utilities for request/response handling, reverse proxy, and WebSocket support
 ---
 
