--- a/content/docs/impl/goutils-pool.mdx
+++ b/content/docs/impl/goutils-pool.mdx
@@ -1,5 +1,5 @@
 ---
-title: pool
+title: goutils/pool
 description: Thread-safe object pool for managing collections of objects with string keys
 ---
 
