--- a/content/docs/impl/goutils-synk.mdx
+++ b/content/docs/impl/goutils-synk.mdx
@@ -1,5 +1,5 @@
 ---
-title: synk/pool
+title: goutils/synk
 description: A pool of bytes buffers that are reused instead of allocated and freed
 ---
 
