--- a/content/docs/impl/goutils-task.mdx
+++ b/content/docs/impl/goutils-task.mdx
@@ -1,5 +1,5 @@
 ---
-title: task
+title: goutils/task
 description: Task utility package for managing object lifetimes with hierarchical subtasks, callbacks, and graceful shutdown
 ---
 
