--- a/content/docs/impl/goutils-version.mdx
+++ b/content/docs/impl/goutils-version.mdx
@@ -1,5 +1,5 @@
 ---
-title: version
+title: goutils/version
 description: Version utilities for semantic versioning with parsing and comparison
 ---
 
