--- a/content/docs/impl/internal-acl.mdx
+++ b/content/docs/impl/internal-acl.mdx
@@ -1,5 +1,5 @@
 ---
-title: ACL (Access Control List)
+title: internal/acl
 description: Access control at the TCP connection level with IP/CIDR, timezone, and country-based filtering
 ---
 
