--- a/content/docs/impl/internal-agentpool.mdx
+++ b/content/docs/impl/internal-agentpool.mdx
@@ -1,5 +1,5 @@
 ---
-title: Agent Pool
+title: internal/agentpool
 description: Thread-safe pool for managing remote Docker agent connections
 ---
 
