--- a/content/docs/impl/internal-api-v1.mdx
+++ b/content/docs/impl/internal-api-v1.mdx
@@ -1,5 +1,5 @@
 ---
-title: API v1 Package
+title: internal/api/v1
 description: Implements the v1 REST API handlers for GoDoxy, exposing endpoints for managing routes, Docker containers, certificates, metrics, and system configuration
 ---
 
