--- a/content/docs/impl/internal-auth.mdx
+++ b/content/docs/impl/internal-auth.mdx
@@ -1,5 +1,5 @@
 ---
-title: Authentication
+title: internal/auth
 description: Authentication providers supporting OIDC and username/password authentication with JWT-based sessions
 ---
 
