--- a/content/docs/impl/internal-autocert.mdx
+++ b/content/docs/impl/internal-autocert.mdx
@@ -1,5 +1,5 @@
 ---
-title: Autocert Package
+title: internal/autocert
 description: Automated SSL certificate management using the ACME protocol (Let's Encrypt and compatible CAs)
 ---
 
