--- a/content/docs/impl/internal-config-query.mdx
+++ b/content/docs/impl/internal-config-query.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configuration Query
+title: internal/config/query
 description: Read-only access to the active configuration state, including route providers and system statistics
 ---
 
