--- a/content/docs/impl/internal-config.mdx
+++ b/content/docs/impl/internal-config.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configuration Management
+title: internal/config
 description: Centralized YAML configuration management with thread-safe state access and provider initialization
 ---
 
