--- a/content/docs/impl/internal-dnsproviders.mdx
+++ b/content/docs/impl/internal-dnsproviders.mdx
@@ -1,5 +1,5 @@
 ---
-title: DNS Providers
+title: internal/dnsproviders
 description: DNS provider integrations for Let's Encrypt certificate management via the lego library
 ---
 
