--- a/content/docs/impl/internal-docker.mdx
+++ b/content/docs/impl/internal-docker.mdx
@@ -1,5 +1,5 @@
 ---
-title: Docker Integration
+title: internal/docker
 description: Docker container discovery, connection management, and label-based route configuration
 ---
 
