--- a/content/docs/impl/internal-entrypoint.mdx
+++ b/content/docs/impl/internal-entrypoint.mdx
@@ -1,5 +1,5 @@
 ---
-title: Entrypoint
+title: internal/entrypoint
 description: The entrypoint package provides the main HTTP entry point for GoDoxy, handling domain-based routing, middleware application, short link matching, access logging, and HTTP server lifecycle management
 ---
 
