--- a/content/docs/impl/internal-health-check.mdx
+++ b/content/docs/impl/internal-health-check.mdx
@@ -1,5 +1,5 @@
 ---
-title: Health Check Package
+title: internal/health/check
 description: Low-level health check implementations for different protocols and services in GoDoxy
 ---
 
