--- a/content/docs/impl/internal-health-monitor.mdx
+++ b/content/docs/impl/internal-health-monitor.mdx
@@ -1,5 +1,5 @@
 ---
-title: Health Monitor Package
+title: internal/health/monitor
 description: Route health monitoring with configurable check intervals, retry policies, and notification integration
 ---
 
