--- a/content/docs/impl/internal-homepage-icons.mdx
+++ b/content/docs/impl/internal-homepage-icons.mdx
@@ -1,5 +1,5 @@
 ---
-title: Icons Package
+title: internal/homepage/icons
 description: Icon URL parsing, fetching, and listing for the homepage dashboard
 ---
 
