--- a/content/docs/impl/internal-homepage-integrations-qbittorrent.mdx
+++ b/content/docs/impl/internal-homepage-integrations-qbittorrent.mdx
@@ -1,10 +1,10 @@
 ---
-title: qBittorrent Integration Package
+title: internal/homepage/integrations/qbittorrent
 description: This package provides a qBittorrent widget for the GoDoxy homepage dashboard, enabling real-time monitoring of torrent status and transfer statistics
 ---
 
 <Callout type="warn">
-  This package is a work in progress and is not stable.
+This package is a work in progress and is not stable.
 </Callout>
 
 ## Overview
