--- a/content/docs/impl/internal-homepage-widgets.mdx
+++ b/content/docs/impl/internal-homepage-widgets.mdx
@@ -1,10 +1,10 @@
 ---
-title: Homepage Widgets Package
+title: internal/homepage/widgets
 description: This package provides a widget framework for the GoDoxy homepage dashboard, enabling integration with various service providers to display real-time data
 ---
 
 <Callout type="warn">
-  This package is a work in progress and is not stable.
+This package is a work in progress and is not stable.
 </Callout>
 
 ## Overview
