--- a/content/docs/impl/internal-homepage.mdx
+++ b/content/docs/impl/internal-homepage.mdx
@@ -1,5 +1,5 @@
 ---
-title: Homepage
+title: internal/homepage
 description: The homepage package provides the GoDoxy WebUI dashboard with support for categories, favorites, widgets, dynamic item configuration, and icon management
 ---
 
