--- a/content/docs/impl/internal-idlewatcher-provider.mdx
+++ b/content/docs/impl/internal-idlewatcher-provider.mdx
@@ -1,5 +1,5 @@
 ---
-title: Idlewatcher Provider
+title: internal/idlewatcher/provider
 description: Implements container runtime abstractions for Docker and Proxmox LXC backends
 ---
 
