--- a/content/docs/impl/internal-idlewatcher.mdx
+++ b/content/docs/impl/internal-idlewatcher.mdx
@@ -1,5 +1,5 @@
 ---
-title: Idlewatcher
+title: internal/idlewatcher
 description: Manages container lifecycle based on idle timeout, automatically stopping/pausing containers and waking them on request
 ---
 
