--- a/content/docs/impl/internal-jsonstore.mdx
+++ b/content/docs/impl/internal-jsonstore.mdx
@@ -1,5 +1,5 @@
 ---
-title: JSON Store
+title: internal/jsonstore
 description: The jsonstore package provides persistent JSON storage with namespace support, using thread-safe concurrent maps and automatic loading/saving
 ---
 
