--- a/content/docs/impl/internal-logging-accesslog.mdx
+++ b/content/docs/impl/internal-logging-accesslog.mdx
@@ -1,5 +1,5 @@
 ---
-title: Access Logging
+title: internal/logging/accesslog
 description: Provides HTTP access logging with file rotation, log filtering, and multiple output formats for request and ACL event logging
 ---
 
