--- a/content/docs/impl/internal-logging-memlogger.mdx
+++ b/content/docs/impl/internal-logging-memlogger.mdx
@@ -1,5 +1,5 @@
 ---
-title: In-Memory Logger
+title: internal/logging/memlogger
 description: Provides a thread-safe in-memory circular buffer logger with WebSocket-based real-time streaming for log data
 ---
 
