--- a/content/docs/impl/internal-logging.mdx
+++ b/content/docs/impl/internal-logging.mdx
@@ -1,5 +1,5 @@
 ---
-title: Logging Package
+title: internal/logging
 description: Structured logging capabilities for GoDoxy, including application logging, HTTP access logging, and in-memory log streaming
 ---
 
