--- a/content/docs/impl/internal-maxmind.mdx
+++ b/content/docs/impl/internal-maxmind.mdx
@@ -1,5 +1,5 @@
 ---
-title: MaxMind
+title: internal/maxmind
 description: The maxmind package provides MaxMind GeoIP database integration for IP geolocation, including automatic database downloading and updates
 ---
 
