--- a/content/docs/impl/internal-metrics-period.mdx
+++ b/content/docs/impl/internal-metrics-period.mdx
@@ -1,5 +1,5 @@
 ---
-title: Period Metrics
+title: internal/metrics/period
 description: Provides time-bucketed metrics storage with configurable periods, enabling historical data aggregation and real-time streaming
 ---
 
