--- a/content/docs/impl/internal-metrics-systeminfo.mdx
+++ b/content/docs/impl/internal-metrics-systeminfo.mdx
@@ -1,5 +1,5 @@
 ---
-title: System Info
+title: internal/metrics/systeminfo
 description: Collects and aggregates system metrics including CPU, memory, disk, network, and sensor data with configurable aggregation modes
 ---
 
