--- a/content/docs/impl/internal-metrics-uptime.mdx
+++ b/content/docs/impl/internal-metrics-uptime.mdx
@@ -1,5 +1,5 @@
 ---
-title: Uptime
+title: internal/metrics/uptime
 description: Tracks and aggregates route health status over time, providing uptime/downtime statistics and latency metrics
 ---
 
