--- a/content/docs/impl/internal-metrics.mdx
+++ b/content/docs/impl/internal-metrics.mdx
@@ -1,5 +1,5 @@
 ---
-title: Metrics Package
+title: internal/metrics
 description: System monitoring and metrics collection for GoDoxy with time-series storage and REST/WebSocket APIs
 ---
 
