--- a/content/docs/impl/internal-net-gphttp-middleware-captcha.mdx
+++ b/content/docs/impl/internal-net-gphttp-middleware-captcha.mdx
@@ -1,5 +1,5 @@
 ---
-title: Captcha Middleware
+title: internal/net/gphttp/middleware/captcha
 description: CAPTCHA verification middleware package providing session-based captcha challenge and verification
 ---
 
