--- a/content/docs/impl/internal-net-gphttp-middleware-errorpage.mdx
+++ b/content/docs/impl/internal-net-gphttp-middleware-errorpage.mdx
@@ -1,5 +1,5 @@
 ---
-title: Error Page Middleware
+title: internal/net/gphttp/middleware/errorpage
 description: Custom error page serving middleware that replaces default HTTP error responses with styled custom pages
 ---
 
