--- a/content/docs/impl/internal-net-gphttp-middleware.mdx
+++ b/content/docs/impl/internal-net-gphttp-middleware.mdx
@@ -1,5 +1,5 @@
 ---
-title: Middleware
+title: internal/net/gphttp/middleware
 description: HTTP middleware framework providing request/response processing, middleware chaining, and composition from YAML files
 ---
 
