--- a/content/docs/impl/internal-net-gphttp.mdx
+++ b/content/docs/impl/internal-net-gphttp.mdx
@@ -1,5 +1,5 @@
 ---
-title: gphttp
+title: internal/net/gphttp
 description: HTTP utilities package providing transport configuration, default HTTP client, and a wrapper around `http.ServeMux` with panic recovery
 ---
 
