--- a/content/docs/impl/internal-net.mdx
+++ b/content/docs/impl/internal-net.mdx
@@ -1,5 +1,5 @@
 ---
-title: Network Utilities
+title: internal/net
 description: The net package provides network utility functions for GoDoxy, including TCP connection testing and network-related helpers
 ---
 
