--- a/content/docs/impl/internal-notif.mdx
+++ b/content/docs/impl/internal-notif.mdx
@@ -1,5 +1,5 @@
 ---
-title: Notifications
+title: internal/notif
 description: The notif package provides a notification dispatching system for GoDoxy, supporting multiple providers (Webhook, Gotify, Ntfy) with retry logic and exponential backoff
 ---
 
