--- a/content/docs/impl/internal-proxmox.mdx
+++ b/content/docs/impl/internal-proxmox.mdx
@@ -1,5 +1,5 @@
 ---
-title: Proxmox
+title: internal/proxmox
 description: The proxmox package provides Proxmox VE integration for GoDoxy, enabling management of Proxmox LXC containers
 ---
 
