--- a/content/docs/impl/internal-route-provider.mdx
+++ b/content/docs/impl/internal-route-provider.mdx
@@ -1,5 +1,5 @@
 ---
-title: Route Provider
+title: internal/route/provider
 description: Discovers and loads routes from Docker containers, YAML files, and remote agents
 ---
 
