--- a/content/docs/impl/internal-route-rules-presets.mdx
+++ b/content/docs/impl/internal-route-rules-presets.mdx
@@ -1,5 +1,5 @@
 ---
-title: Rule Presets
+title: internal/route/rules/presets
 description: Provides embedded, pre-configured rule sets for common routing patterns
 ---
 
