--- a/content/docs/impl/internal-route-rules.mdx
+++ b/content/docs/impl/internal-route-rules.mdx
@@ -1,5 +1,5 @@
 ---
-title: Route Rules
+title: internal/route/rules
 description: Implements a rule engine for HTTP request/response processing, enabling conditional routing, header manipulation, authentication, and more
 ---
 
