--- a/content/docs/impl/internal-route-stream.mdx
+++ b/content/docs/impl/internal-route-stream.mdx
@@ -1,5 +1,5 @@
 ---
-title: Stream Handling
+title: internal/route/stream
 description: Implements TCP and UDP stream proxying for non-HTTP protocols
 ---
 
