--- a/content/docs/impl/internal-route.mdx
+++ b/content/docs/impl/internal-route.mdx
@@ -1,5 +1,5 @@
 ---
-title: Route
+title: internal/route
 description: Provides HTTP routing, reverse proxy, file serving, and TCP/UDP stream proxying for GoDoxy
 ---
 
