--- a/content/docs/impl/internal-serialization.mdx
+++ b/content/docs/impl/internal-serialization.mdx
@@ -1,5 +1,5 @@
 ---
-title: Serialization Package
+title: internal/serialization
 description: Flexible, type-safe serialization/deserialization with validation support for GoDoxy configuration
 ---
 
