--- a/content/docs/impl/internal-watcher.mdx
+++ b/content/docs/impl/internal-watcher.mdx
@@ -1,5 +1,5 @@
 ---
-title: Watcher
+title: internal/watcher
 description: Provides file and Docker event watching capabilities for GoDoxy, enabling dynamic configuration updates
 ---
 
