--- a/content/docs/impl/socket-proxy-pkg-reverseproxy.mdx
+++ b/content/docs/impl/socket-proxy-pkg-reverseproxy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Socket Proxy Reverse Proxy
+title: socket-proxy/pkg/reverseproxy
 description: This package provides an HTTP reverse proxy implementation for proxying requests to Unix sockets (typically Docker sockets). It is based on Go's `net/http/httputil.ReverseProxy` with simplifications for socket proxying use cases
 ---
 
