--- a/content/docs/impl/internal-net-gphttp-loadbalancer.mdx
+++ b/content/docs/impl/internal-net-gphttp-loadbalancer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Load Balancer
+title: internal/net/gphttp/loadbalancer
 description: Load balancing package providing multiple distribution algorithms, sticky sessions, and server health management
 ---
 
